--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/converter.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <title>Vite + React</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <title>Converter Binary to Desimal</title>
   </head>
   <body>
     <div id="root"></div>
